@@ -1,6 +1,9 @@
 ViTables ChangeLog
 ==================
 ** Dec 04, 2008**
+	Nodes copying has been updated: leaves whose dataset is not readable are not
+	copied
+
 	Deletion of views tied to overwritten nodes has been implemented.
 
 	The status bar is properly updated now when a node is renamed in the Tree of databases pane.
